Add SENTRY_DSN, ENV, DEBUG env variables and init sentry

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,9 @@ services:
     networks:
       - sync
     environment:
+      - SENTRY_DSN
+      - ENV=local
+      - DEBUG=1
       - AWS_ACCESS_KEY_ID=#
       - AWS_SECRET_ACCESS_KEY=#
   web:
@@ -27,6 +30,9 @@ services:
     networks:
       - sync
     environment:
+      - SENTRY_DSN
+      - ENV=local
+      - DEBUG=1
       - AWS_ACCESS_KEY_ID=#
       - AWS_SECRET_ACCESS_KEY=#
   dynamo-local:
