Move aws config and table_name into env

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,8 @@ services:
       - DEBUG=1
       - AWS_ACCESS_KEY_ID=#
       - AWS_SECRET_ACCESS_KEY=#
+      - AWS_REGION=us-west-2
+      - AWS_ENDPOINT=http://dynamo-local:8000
   web:
     build:
       context: .
@@ -35,6 +37,9 @@ services:
       - DEBUG=1
       - AWS_ACCESS_KEY_ID=#
       - AWS_SECRET_ACCESS_KEY=#
+      - AWS_REGION=us-west-2
+      - AWS_ENDPOINT=http://dynamo-local:8000
+      - TABLE_NAME=client-entity-token-dev
   dynamo-local:
     build:
       context: .
