--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
     networks:
       - sync
     environment:
+      - PPROF_ENABLED=true
       - SENTRY_DSN
       - ENV=local
       - DEBUG=1
@@ -32,6 +33,7 @@ services:
     networks:
       - sync
     environment:
+      - PPROF_ENABLED=true
       - SENTRY_DSN
       - ENV=local
       - DEBUG=1
