Add a redis cache for storing clientID#dataType, mtime pairs
When we commit new entries to a type or when we get updates from dynamoDB, we
will save a (clientID#dataType, mtime) pair into the cache, which represents
the last seen modification time of one specific sync type for a client.
With this information in the cache, we could check if there might be no updates
in the dynamoDB since the client's passed token in the FromProgressMarker when
we handle poll get updates requests. If cached mtime <= client's token, there
might be no updates to query in the DB so we can skip querying dynamoDB to
reduce our RCU cost on the GSI. To be safe, we set ttl for key to be 5 minutes
so we will not skip querying DB forever when things somehow go wrong.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,7 @@ services:
         BUILD_TIME: "${BUILD_TIME}"
     depends_on:
       - dynamo-local
+      - redis
     networks:
       - sync
     environment:
@@ -26,6 +27,7 @@ services:
       - AWS_SECRET_ACCESS_KEY=#
       - AWS_REGION=us-west-2
       - AWS_ENDPOINT=http://dynamo-local:8000
+      - REDIS_URL=redis:6379
   web:
     build:
       context: .
@@ -38,6 +40,7 @@ services:
       - "8295:8295"
     depends_on:
       - dynamo-local
+      - redis
     networks:
       - sync
     environment:
@@ -50,11 +53,18 @@ services:
       - AWS_REGION=us-west-2
       - AWS_ENDPOINT=http://dynamo-local:8000
       - TABLE_NAME=client-entity-dev
+      - REDIS_URL=redis:6379
   dynamo-local:
     build:
       context: .
       dockerfile: dynamo.Dockerfile
     ports:
       - "8000:8000"
+    networks:
+      - sync
+  redis:
+    image: redis:latest
+    ports:
+      - "6379:6379"
     networks:
       - sync
