Narrow scope to specific clients
This is a temporary approach, will be reverted really soon.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,6 +28,7 @@ services:
       - AWS_REGION=us-west-2
       - AWS_ENDPOINT=http://dynamo-local:8000
       - REDIS_URL=redis:6379
+      - ReturnConflictForClientTag=TEST
   web:
     build:
       context: .
