--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,8 +21,7 @@ jobs:
           go-version: 1.14
 
       - name: lint
-        # uses: golangci/golangci-lint-action@v3
-        run: make lint
+        uses: golangci/golangci-lint-action@v3
 
       - name: test
         run: make test
