--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,8 +23,8 @@ services:
       - SENTRY_DSN
       - ENV=local
       - DEBUG=1
-      - AWS_ACCESS_KEY_ID=#
-      - AWS_SECRET_ACCESS_KEY=#
+      - AWS_ACCESS_KEY_ID=GOSYNC
+      - AWS_SECRET_ACCESS_KEY=GOSYNC
       - AWS_REGION=us-west-2
       - AWS_ENDPOINT=http://dynamo-local:8000
       - REDIS_URL=redis:6379
@@ -48,8 +48,8 @@ services:
       - SENTRY_DSN
       - ENV=local
       - DEBUG=1
-      - AWS_ACCESS_KEY_ID=#
-      - AWS_SECRET_ACCESS_KEY=#
+      - AWS_ACCESS_KEY_ID=GOSYNC
+      - AWS_SECRET_ACCESS_KEY=GOSYNC
       - AWS_REGION=us-west-2
       - AWS_ENDPOINT=http://dynamo-local:8000
       - TABLE_NAME=client-entity-dev
