Embed SQL migrations, fix existing tests

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,7 @@ services:
     depends_on:
       - dynamo-local
       - redis
+      - postgres
     networks:
       - sync
     environment:
@@ -29,6 +30,7 @@ services:
       - AWS_ENDPOINT=http://dynamo-local:8000
       - REDIS_URL=redis:6379
       - SQL_DATABASE_URL=postgres://sync:password@postgres/postgres?sslmode=disable
+      - SQL_TEST_DATABASE_URL=postgres://sync:password@postgres/testing?sslmode=disable
   web:
     build:
       context: .
@@ -56,6 +58,7 @@ services:
       - TABLE_NAME=client-entity-dev
       - REDIS_URL=redis:6379
       - SQL_DATABASE_URL=postgres://sync:password@postgres/postgres?sslmode=disable
+      - SQL_TEST_DATABASE_URL=postgres://sync:password@postgres/testing?sslmode=disable
   dynamo-local:
     build:
       context: .
@@ -81,3 +84,5 @@ services:
       - POSTGRES_PASSWORD=password
     networks:
       - sync
+    volumes:
+      - "./misc/create_additional_dbs.sql:/docker-entrypoint-initdb.d/create_additional_dbs.sql"
