--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -2,5 +2,9 @@
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": [
     "local>brave/renovate-config"
+  ],
+  "ignorePaths": [
+    "**/go.mod",
+    "**/go.sum"
   ]
 }
