Make dynamo container ephemeral
Fixes #348

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -58,6 +58,8 @@ services:
       dockerfile: dynamo.Dockerfile
     ports:
       - "8000:8000"
+    volumes:
+      - ./dynamo-data:/db
     networks:
       - sync
   redis:
